exports[`BpkStar should render correctly with a "className" prop 1`] = `
<svg
  className="bpk-star bpk-star--filled my-class"
  height="18"
  style={
    Object {
      "height": "1.125rem",
      "width": "1.125rem",
    }
  }
  viewBox="0 0 24 24"
  width="18"
  xmlns="http://www.w3.org/2000/svg">
  <path
    d="M12.8 3.5L15 8c.1.3.4.4.7.5l4.6.7c.7.1 1 1 .5 1.5L17 14.2c-.2.2-.3.5-.3.8l1.5 5c.1.7-.6 1.3-1.3.9l-4.4-3c-.3-.1-.6-.1-.8 0l-4.4 3c-.6.3-1.4-.2-1.3-.9l1.5-5c0-.3 0-.6-.3-.8l-3.8-3.5c-.7-.5-.4-1.4.4-1.5l4.6-.7c.2-.1.5-.2.6-.5l2.2-4.5c.3-.7 1.3-.7 1.6 0z" />
</svg>
`;

exports[`BpkStar should render correctly with a large empty star 1`] = `
<svg
  className="bpk-star bpk-star--large"
  height="24"
  style={
    Object {
      "height": "1.5rem",
      "width": "1.5rem",
    }
  }
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg">
  <path
    d="M12.8 3.5L15 8c.1.3.4.4.7.5l4.6.7c.7.1 1 1 .5 1.5L17 14.2c-.2.2-.3.5-.3.8l1.5 5c.1.7-.6 1.3-1.3.9l-4.4-3c-.3-.1-.6-.1-.8 0l-4.4 3c-.6.3-1.4-.2-1.3-.9l1.5-5c0-.3 0-.6-.3-.8l-3.8-3.5c-.7-.5-.4-1.4.4-1.5l4.6-.7c.2-.1.5-.2.6-.5l2.2-4.5c.3-.7 1.3-.7 1.6 0z" />
</svg>
`;

exports[`BpkStar should render correctly with a large full star 1`] = `
<svg
  className="bpk-star bpk-star--large bpk-star--filled"
  height="24"
  style={
    Object {
      "height": "1.5rem",
      "width": "1.5rem",
    }
  }
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg">
  <path
    d="M12.8 3.5L15 8c.1.3.4.4.7.5l4.6.7c.7.1 1 1 .5 1.5L17 14.2c-.2.2-.3.5-.3.8l1.5 5c.1.7-.6 1.3-1.3.9l-4.4-3c-.3-.1-.6-.1-.8 0l-4.4 3c-.6.3-1.4-.2-1.3-.9l1.5-5c0-.3 0-.6-.3-.8l-3.8-3.5c-.7-.5-.4-1.4.4-1.5l4.6-.7c.2-.1.5-.2.6-.5l2.2-4.5c.3-.7 1.3-.7 1.6 0z" />
</svg>
`;

exports[`BpkStar should render correctly with a large half star 1`] = `
<span
  className="bpk-star__container bpk-star__container--half-star bpk-star__container--large">
  <svg
    className="bpk-star bpk-star--half bpk-star--filled"
    height="24"
    style={
      Object {
        "height": "1.5rem",
        "width": "1.5rem",
      }
    }
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg">
    <path
      d="M12 17.6V3c-.3 0-.6.2-.8.5L9 8c-.1.3-.4.4-.7.5l-4.5.7c-.7.1-1 1-.5 1.5l3.8 3.5c.2.2.3.5.3.8l-1.5 5c-.1.7.6 1.3 1.3.9l4.8-3.3z" />
  </svg>
  <svg
    className="bpk-star bpk-star--half-flipped"
    height="24"
    style={
      Object {
        "height": "1.5rem",
        "width": "1.5rem",
      }
    }
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg">
    <path
      d="M12 17.6V3c-.3 0-.6.2-.8.5L9 8c-.1.3-.4.4-.7.5l-4.5.7c-.7.1-1 1-.5 1.5l3.8 3.5c.2.2.3.5.3.8l-1.5 5c-.1.7.6 1.3 1.3.9l4.8-3.3z" />
  </svg>
</span>
`;

exports[`BpkStar should render correctly with empty star 1`] = `
<svg
  className="bpk-star"
  height="18"
  style={
    Object {
      "height": "1.125rem",
      "width": "1.125rem",
    }
  }
  viewBox="0 0 24 24"
  width="18"
  xmlns="http://www.w3.org/2000/svg">
  <path
    d="M12.8 3.5L15 8c.1.3.4.4.7.5l4.6.7c.7.1 1 1 .5 1.5L17 14.2c-.2.2-.3.5-.3.8l1.5 5c.1.7-.6 1.3-1.3.9l-4.4-3c-.3-.1-.6-.1-.8 0l-4.4 3c-.6.3-1.4-.2-1.3-.9l1.5-5c0-.3 0-.6-.3-.8l-3.8-3.5c-.7-.5-.4-1.4.4-1.5l4.6-.7c.2-.1.5-.2.6-.5l2.2-4.5c.3-.7 1.3-.7 1.6 0z" />
</svg>
`;

exports[`BpkStar should render correctly with full star 1`] = `
<svg
  className="bpk-star bpk-star--filled"
  height="18"
  style={
    Object {
      "height": "1.125rem",
      "width": "1.125rem",
    }
  }
  viewBox="0 0 24 24"
  width="18"
  xmlns="http://www.w3.org/2000/svg">
  <path
    d="M12.8 3.5L15 8c.1.3.4.4.7.5l4.6.7c.7.1 1 1 .5 1.5L17 14.2c-.2.2-.3.5-.3.8l1.5 5c.1.7-.6 1.3-1.3.9l-4.4-3c-.3-.1-.6-.1-.8 0l-4.4 3c-.6.3-1.4-.2-1.3-.9l1.5-5c0-.3 0-.6-.3-.8l-3.8-3.5c-.7-.5-.4-1.4.4-1.5l4.6-.7c.2-.1.5-.2.6-.5l2.2-4.5c.3-.7 1.3-.7 1.6 0z" />
</svg>
`;

exports[`BpkStar should render correctly with half star 1`] = `
<span
  className="bpk-star__container bpk-star__container--half-star">
  <svg
    className="bpk-star bpk-star--half bpk-star--filled"
    height="18"
    style={
      Object {
        "height": "1.125rem",
        "width": "1.125rem",
      }
    }
    viewBox="0 0 24 24"
    width="18"
    xmlns="http://www.w3.org/2000/svg">
    <path
      d="M12 17.6V3c-.3 0-.6.2-.8.5L9 8c-.1.3-.4.4-.7.5l-4.5.7c-.7.1-1 1-.5 1.5l3.8 3.5c.2.2.3.5.3.8l-1.5 5c-.1.7.6 1.3 1.3.9l4.8-3.3z" />
  </svg>
  <svg
    className="bpk-star bpk-star--half-flipped"
    height="18"
    style={
      Object {
        "height": "1.125rem",
        "width": "1.125rem",
      }
    }
    viewBox="0 0 24 24"
    width="18"
    xmlns="http://www.w3.org/2000/svg">
    <path
      d="M12 17.6V3c-.3 0-.6.2-.8.5L9 8c-.1.3-.4.4-.7.5l-4.5.7c-.7.1-1 1-.5 1.5l3.8 3.5c.2.2.3.5.3.8l-1.5 5c-.1.7.6 1.3 1.3.9l4.8-3.3z" />
  </svg>
</span>
`;
